update to 0.1.3 - made Internet node optional, updated conf comments

--- a/examples/network_Routing.conf
+++ b/examples/network_Routing.conf
@@ -1,7 +1,8 @@
-//Format: IP/Name X Y Color
-//Example: 127.0.0.1 10 10 #ff00ff
-//   Internet 120 120 #ffffff
-//Note: Internet entry is required!
+//Format: Node IP/Name X Y img_path
+//Example: Node 127.0.0.1 10 10 img/Node.png
+
+//Internet is a special node: all traffic from/to
+// unknown IPs are shown from/to this node
 Node Internet 240 20 img/Internet.png
 Node Firewall 240 120 img/Broadcast.png
 Node Internal_Router 360 120 img/WiFiRouter.png
