--- a/examples/network_bigFlows.conf
+++ b/examples/network_bigFlows.conf
@@ -1,7 +1,8 @@
-//Format: IP/Name X Y Color
-//Example: 127.0.0.1 10 10 #ff00ff
-//   Internet 120 120 #ffffff
-//Note: Internet entry is required!
+//Format: Node IP/Name X Y img_path
+//Example: Node 127.0.0.1 10 10 img/Node.png
+
+//Internet is a special node: all traffic from/to
+// unknown IPs are shown from/to this node
 Node Internet 380 20 img/Internet.png
 Node 172.16.133.49 100 260 img/Desktop.png
 Node 172.16.133.56 250 260 img/Node.png
@@ -12,4 +13,5 @@ Node 172.16.133.114 100 160 img/Desktop.png
 Node 172.16.133.13 700 160 img/Node.png
 Node 172.16.133.82 100 60 img/Node.png
 Node 172.16.133.99 700 60 img/Desktop.png
-
+//This entry contains no routing rules, all traffic
+// will travel directly to destination
