--- a/examples/network_http.conf
+++ b/examples/network_http.conf
@@ -1,7 +1,8 @@
-//Format: IP/Name X Y Color
-//Example: 127.0.0.1 10 10 #ff00ff
-//   Internet 120 120 #ffffff
-//Note: Internet entry is required!
+//Format: Node IP/Name X Y img_path
+//Example: Node 127.0.0.1 10 10 img/Node.png
+
+//Internet is a special node: all traffic from/to
+// unknown IPs are shown from/to this node
 Node Internet 360 120 img/Internet.png
 Node 145.254.160.237 240 360 img/Node.png
 Node 65.208.228.223 480 360 img/Server.png
