v.0.1.4 - new visual options, bug fixes

--- a/examples/network_Routing.conf
+++ b/examples/network_Routing.conf
@@ -1,16 +1,17 @@
-//Format: Node IP/Name X Y img_path
+//Format: Node IP Display_Name X Y img_path
 //Example: Node 127.0.0.1 10 10 img/Node.png
 
 //Internet is a special node: all traffic from/to
 // unknown IPs are shown from/to this node
-Node Internet 240 20 img/Internet.png
-Node Firewall 240 120 img/Broadcast.png
-Node Internal_Router 360 120 img/WiFiRouter.png
-Node 192.168.0.103 360 20 img/Desktop.png
-Node 192.168.0.99 520 120 img/Desktop.png
+Node Internet Internet 240 20 img/style2_internet.png
+Node Firewall Firewall 240 120 img/style2_firewall.png
+Node Internal_Router Switch 360 120 img/style2_server.png
+Node 10.139.61.60 Workstation_1 360 20 img/style2_workstation.png
+Node 192.168.0.99 Workstation_2 480 120 img/style2_workstation.png
+
 //Routing config: describe rules for how traffic
 // should flow when communication is not direct
-Rule from 192.168.0 to * through Internal_Router
+Rule from 10.139.61 to * through Internal_Router
 Rule from Internal_Router to Internet through Firewall
 Rule from Internet to * through Firewall
-Rule from Firewall to 192.168.0 through Internal_Router
+Rule from Firewall to 10.139.61 through Internal_Router
