--- a/examples/network_bigFlows.conf
+++ b/examples/network_bigFlows.conf
@@ -1,17 +1,17 @@
-//Format: Node IP/Name X Y img_path
-//Example: Node 127.0.0.1 10 10 img/Node.png
+//Format: Node IP Name X Y img_path
+//Example: Node 127.0.0.1 Localhost 10 10 img/Node.png
 
 //Internet is a special node: all traffic from/to
 // unknown IPs are shown from/to this node
-Node Internet 380 20 img/Internet.png
-Node 172.16.133.49 100 260 img/Desktop.png
-Node 172.16.133.56 250 260 img/Node.png
-Node 172.16.133.57 400 260 img/Node.png
-Node 172.16.133.43 550 260 img/Desktop.png
-Node 172.16.133.53 700 260 img/Node.png
-Node 172.16.133.114 100 160 img/Desktop.png
-Node 172.16.133.13 700 160 img/Node.png
-Node 172.16.133.82 100 60 img/Node.png
-Node 172.16.133.99 700 60 img/Desktop.png
+Node Internet Internet 380 20 img/Internet.png
+Node 172.16.133.49 172.16.133.49 100 260 img/Desktop.png
+Node 172.16.133.56 172.16.133.56 250 260 img/Node.png
+Node 172.16.133.57 172.16.133.57 400 260 img/Node.png
+Node 172.16.133.43 172.16.133.43 550 260 img/Desktop.png
+Node 172.16.133.53 172.16.133.53 700 260 img/Node.png
+Node 172.16.133.114 172.16.133.114 100 160 img/Desktop.png
+Node 172.16.133.13 172.16.133.13 700 160 img/Node.png
+Node 172.16.133.82 172.16.133.82 100 60 img/Node.png
+Node 172.16.133.99 172.16.133.99 700 60 img/Desktop.png
 //This entry contains no routing rules, all traffic
 // will travel directly to destination
