--- a/examples/triggers_Routing.conf
+++ b/examples/triggers_Routing.conf
@@ -1,2 +1,4 @@
 //Triggers.conf
-protocol=icmp
+//Format: protocol=XXX from IP to IP ACTION
+// Actions: highlight (implemented), impact (future)
+protocol=icmp from * to * highlight
