Added line (visible connections) to v.0.1.5

--- a/examples/network_bigFlows.conf
+++ b/examples/network_bigFlows.conf
@@ -13,5 +13,19 @@ Node 172.16.133.114 172.16.133.114 100 160 img/Desktop.png
 Node 172.16.133.13 172.16.133.13 700 160 img/Node.png
 Node 172.16.133.82 172.16.133.82 100 60 img/Node.png
 Node 172.16.133.99 172.16.133.99 700 60 img/Desktop.png
+
+//Lines (Connections between nodes you would like visible)
+// Format: Line IP_1 IP_2
+Line Internet 172.16.133.49
+Line Internet 172.16.133.56
+Line Internet 172.16.133.57
+Line Internet 172.16.133.43
+Line Internet 172.16.133.53
+Line Internet 172.16.133.114
+Line Internet 172.16.133.13
+Line Internet 172.16.133.82
+Line Internet 172.16.133.99
 //This entry contains no routing rules, all traffic
 // will travel directly to destination
+
+
