--- a/examples/network_Routing.conf
+++ b/examples/network_Routing.conf
@@ -7,7 +7,11 @@ Node Internet Internet 240 20 img/style2_internet.png
 Node Firewall Firewall 240 120 img/style2_firewall.png
 Node Internal_Router Switch 360 120 img/style2_server.png
 Node 10.139.61.60 Workstation_1 360 20 img/style2_workstation.png
-Node 192.168.0.99 Workstation_2 480 120 img/style2_workstation.png
+Node 10.139.61.61 Workstation_2 480 120 img/style2_workstation.png
+
+//Lines (Connections between nodes you would like visible)
+// Format: Line IP_1 IP_2
+
 
 //Routing config: describe rules for how traffic
 // should flow when communication is not direct
