first part of v.0.1.6: visual changes, new triggers

--- a/examples/triggers_bigFlows.conf
+++ b/examples/triggers_bigFlows.conf
@@ -1,3 +1,4 @@
 //Triggers.conf
 //Format: protocol=XXX from IP to IP ACTION
 // Actions: highlight (implemented), impact (future)
+//protocol=http from * to * HIGHLIGHT
