update to 0.1.6 - major design improvements

--- a/examples/network_Routing.conf
+++ b/examples/network_Routing.conf
@@ -3,15 +3,18 @@
 
 //Internet is a special node: all traffic from/to
 // unknown IPs are shown from/to this node
-Node Internet Internet 240 20 img/style2_internet.png
-Node Firewall Firewall 240 120 img/style2_firewall.png
-Node Internal_Router Switch 360 120 img/style2_server.png
-Node 10.139.61.60 Workstation_1 360 20 img/style2_workstation.png
-Node 10.139.61.61 Workstation_2 480 120 img/style2_workstation.png
+Node Internet Internet 120 20 img/style3_internet.png
+Node Firewall Firewall 240 120 img/style3_shield.png
+Node Internal_Router Switch 360 120 img/style3_router.png
+Node 10.139.61.60 Workstation_1 520 20 img/style3_computer.png
+Node 10.139.61.61 Workstation_2 520 220 img/style3_computer.png
 
 //Lines (Connections between nodes you would like visible)
 // Format: Line IP_1 IP_2
-
+Line Internet Firewall
+Line Firewall Internal_Router
+Line Internal_Router 10.139.61.60
+Line Internal_Router 10.139.61.61
 
 //Routing config: describe rules for how traffic
 // should flow when communication is not direct
