--- a/examples/network_bigFlows.conf
+++ b/examples/network_bigFlows.conf
@@ -3,16 +3,16 @@
 
 //Internet is a special node: all traffic from/to
 // unknown IPs are shown from/to this node
-Node Internet Internet 380 20 img/Internet.png
-Node 172.16.133.49 172.16.133.49 100 260 img/Desktop.png
-Node 172.16.133.56 172.16.133.56 250 260 img/Node.png
-Node 172.16.133.57 172.16.133.57 400 260 img/Node.png
-Node 172.16.133.43 172.16.133.43 550 260 img/Desktop.png
-Node 172.16.133.53 172.16.133.53 700 260 img/Node.png
-Node 172.16.133.114 172.16.133.114 100 160 img/Desktop.png
-Node 172.16.133.13 172.16.133.13 700 160 img/Node.png
-Node 172.16.133.82 172.16.133.82 100 60 img/Node.png
-Node 172.16.133.99 172.16.133.99 700 60 img/Desktop.png
+Node Internet Internet 380 20 img/style3_internet.png
+Node 172.16.133.49 172.16.133.49 100 260 img/style3_computer.png
+Node 172.16.133.56 172.16.133.56 250 260 img/style3_laptop.png
+Node 172.16.133.57 172.16.133.57 400 260 img/style3_laptop.png
+Node 172.16.133.43 172.16.133.43 550 260 img/style3_laptop.png
+Node 172.16.133.53 172.16.133.53 700 260 img/style3_computer.png
+Node 172.16.133.114 172.16.133.114 100 160 img/style3_computer.png
+Node 172.16.133.13 172.16.133.13 700 160 img/style3_computer.png
+Node 172.16.133.82 172.16.133.82 100 60 img/style3_computer.png
+Node 172.16.133.99 172.16.133.99 700 60 img/style3_computer.png
 
 //Lines (Connections between nodes you would like visible)
 // Format: Line IP_1 IP_2
