update to 0.1.8 for triggers.conf and main script

--- a/examples/triggers_bigFlows.conf
+++ b/examples/triggers_bigFlows.conf
@@ -1,4 +1,13 @@
 //Triggers.conf
 //Format: protocol=XXX from IP to IP ACTION
-// Actions: highlight (implemented), impact (future)
+//Format: protocol=XXX from IP to IP ACTION ACTION_OPTIONS
+// Actions:                                         
+//      - highlight (no options)
+//      - display (no options)
+//      - change_dst_icon /path/to/new_icon.png (change destination icon)
+//      - change_src_icon /path/to/new_icon.png (change source icon)
+//      - color hex_or_rgb (change packet color)
+//              - e.g. protocol=http from * to * color #ffffff
+//              - e.g. protocol=icmp from * to * color (255,255,255)
+
 //protocol=http from * to * HIGHLIGHT
